--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <html>
     <body>
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3YDDUVssyPI?si=oMeKzOam2WFp_lWx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/3YDDUVssyPI?si=oMeKzOam2WFp_lWx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </body>
 </html>
+
+<style>
+    iframe {
+      display: block;
+    }
+    body {
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        vertical-align: middle;
+    }
+</style>
